package com.mycompany.test1.navigation;

public class Travel {
    
}
